--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="task-box cf">
-                    <input class="task-cbx" id="id-cbx-2" type="checkbox" name="name-cbx" value="value-cbx">
+                    <input class="task-cbx" id="id-cbx-2" checked type="checkbox" name="name-cbx" value="value-cbx">
                     <label class="task-cbx-lbl" for="id-cbx-2"></label>
                     <div class="task-edit-box" contenteditable="true">
                         <span>Prepare the report</span>
@@ -55,11 +55,20 @@
                     <button class="task-edit-close-btn" type="button" name="button">&#215;</button>
                 </div>
 
+                <div class="task-box cf">
+                    <input class="task-cbx" id="id-cbx-4" type="checkbox" name="name-cbx" value="value-cbx">
+                    <label class="task-cbx-lbl" for="id-cbx-4"></label>
+                    <div class="task-edit-box" contenteditable="true">
+                        <span>Pick up dress from the dry cleaner</span>
+                    </div>
+                    <button class="task-edit-close-btn" type="button" name="button">&#215;</button>
+                </div>
+
             </form>
 
             <!-- Apakša sākums -->
             <div class="foot-box">
-                <span class="foot-count-text"> 3 items left</span>
+                <span class="foot-count-text">4 items left</span>
                 <div class="foot-select-btn-box">
                     <button class="foot-select-btn hover" type="button" name="button">All</button>
                     <button class="foot-select-btn" type="button" name="button">Active</button>
@@ -74,7 +83,8 @@
         <!-- Falšpaneļi -->
         <span class="false-box false-box-1"></span>
         <span class="false-box false-box-2"></span>
-      </div>
+    </div>
 
 </body>
+
 </html>
