--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <!-- Galva sākums -->
             <div class="head-box cf">
                 <div class="head-btn-box">
-                    <button class="head-btn head-btn-up" type="button" name="button"></button>
+                    <!-- <button class="head-btn head-btn-up" type="button" name="button"></button> -->
                     <button class="head-btn head-btn-down" type="button" name="button"></button>
                 </div>
-                <div class="head-text-box">
-                    What needs to be done?
+                <div class="head-text-box" contenteditable="true">
+                    <span>What needs to be done?</span>
                 </div>
             </div>
             <!-- Galva beigas -->
