--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
                 <div class="head-btn-box head-btn-box-hiden">
                     <button class="head-btn head-btn-down" type="button" name="button"></button>
                 </div>
-                <div class="head-text-box" contenteditable="true" placeholder="What needs to be done?">
-                    <!--
--->
-                </div>
+                <div class="head-text-box" contenteditable="true" placeholder="What needs to be done?"></div>
             </div>
             <!-- Galva beigas -->
             <form class="task-form" action="index.html" method="post">
